fix: webkit scrollbar styling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -200,3 +200,15 @@ input[type="search"]::-webkit-search-cancel-button {
   background: url(../public/search-cancel.svg) no-repeat 50% 50%;
   background-size: contain;
 }
+
+::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+::-webkit-scrollbar-track {
+  @apply my-4 bg-transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply rounded-full bg-neutral-200 dark:bg-neutral-600;
+}
